--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ subjects:
 - !lcc 'D501'
 - !lcsh 'World War, 1914-1918 -- Periodicals'
 - !lcsh 'World War, 1914-1918 -- France'
+- GITenberg
 title: "Bulletin de Lille, 1915-12\r\nPublié sous le contrôle de l'autorité allemande"
 url: http://www.gutenberg.org/ebooks/16388
